--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "express": "^4.18.2",
+    "mongodb": "^5.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.2",
     "ts-node": "^10.9.1",
