--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,5 +1,12 @@
 # Dependency directories
 node_modules/
+./node_modules
+node_modules
+/node_modules
+/node_modules/
+/node_modules/*
+/node_modules/**/*
+/node_modules/**/**/*
 
 # Environment variables
 .env
